Bug fix + Swagger for Checkout
